--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "noflo-core": "^0.6.0",
     "noflo-dom": "^0.3.0",
     "noflo-interaction": "^0.3.0",
-    "noflo-runtime-postmessage": "^0.10.0"
+    "noflo-runtime-postmessage": "^0.10.0",
+    "web3": "^1.0.0-beta.37"
   },
   "devDependencies": {
     "@babel/core": "^7.1.6",
